adds Address and start time
