# docs/swagger.json
@@ -87,6 +87,9 @@
         "workhandler.CreateWorkDTO": {
             "type": "object",
             "properties": {
+                "address": {
+                    "type": "string"
+                },
                 "eventType": {
                     "type": "string"
                 },
@@ -98,10 +101,16 @@
         "workhandler.WorkDTO": {
             "type": "object",
             "properties": {
+                "address": {
+                    "type": "string"
+                },
                 "eventType": {
                     "type": "string"
                 },
                 "productId": {
+                    "type": "string"
+                },
+                "startTime": {
                     "type": "string"
                 },
                 "workId": {
